# PAL

./: .env  .gitignore  Cargo.toml  README.md  append  package-lock.json  package.json  pal.code-workspace  pal.sh  pnpm-lock.yaml  tsconfig.json
gpt/: history.json  system-prompt.md
lib/: ast.d.ts  ast.d.ts.map  ast.js  ast.js.map  interpreter.d.ts  interpreter.d.ts.map  interpreter.js  interpreter.js.map  parser.d.ts  parser.d.ts.map  parser.js  parser.js.map  repl.d.ts  repl.d.ts.map  repl.js  repl.js.map
logger/: config.json
notes/: cybernetic-theory-of-neurodivergence.md  documentation.md  extensibility.md  extensions.md  focus.md  funding.md  hci.md  host-language.md  lang-ideas.list  links.md  lisp.md  motivation.md  neurosymbolic.md  pal-ts.bnf  pretty-pal.bnf  todo.list  transformers.md  wip.md
pal-fs/: Cargo.toml
pal-lsp/: .gitignore  .vscodeignore  Cargo.toml  package.json  tsconfig.json  webpack.config.js
pal-lsp-example/: package-lock.json  package.json  tsconfig.json
pal-os/: Dockerfile  README.md  version-check.sh
pal-rs/: Cargo.toml
pal-ts/: package.json  pnpm-lock.yaml  tsconfig.json
src/: ast.ts  (+10 more)
wingman/: Cargo.toml  README.md  build.rs  index.html
wingman/src/: a_ui.rs  b_ui.rs  control.rs  display.rs  lib.rs  main.rs
wingman/src/control/: keyboard.rs  mouse.rs
wingman/src/display/: design.md  geometry.rs  picking.rs  pipeline.rs  render.rs  render.wgsl  text.rs
wingman/src/display/geometry/: circle.rs  dimension.rs  line.rs  point.rs  prism.rs  rectangle.rs  sphere.rs  triangle.rs  vertex.rs
wingman/src/domain/: ast.rs
(+366 files in other folders)
